Fix clue action buttons wrapping

--- a/wp-content/themes/chassesautresor/assets/scss/_general.scss
+++ b/wp-content/themes/chassesautresor/assets/scss/_general.scss
@@ -321,6 +321,12 @@ tbody tr:nth-child(even) {
   text-align: center;
 }
 
+.indices-table .indice-action-buttons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
 .indices-table-header {
   margin-bottom: 0.5rem;
 }
